Refactor border-radius to use CSS variable

--- a/src/lib/scss/Archive/game.scss
+++ b/src/lib/scss/Archive/game.scss
@@ -2,7 +2,7 @@
 	background-color: var(--nav-color);
 	width: 90vw;
 	padding: 50px 50px;
-	border-radius: 5px;
+	border-radius: var(--border-radius);
 	border: 3px solid var(--border-color);
 	margin-right: auto;
 	margin-bottom: 20px;
