--- a/src/lib/scss/app.scss
+++ b/src/lib/scss/app.scss
@@ -73,11 +73,11 @@ body[data-theme='system'] {
 	}
 }
 
-body[data-rounded='true'] {
+body[data-rounded-corners='true'] {
 	--border-radius: 0.25rem;
 }
 
-body[data-rounded='false'] {
+body[data-rounded-corners='false'] {
 	--border-radius: 0;
 }
 
