Add comments for all scss files

--- a/src/lib/scss/Archive/main.scss
+++ b/src/lib/scss/Archive/main.scss
@@ -1,7 +1,18 @@
+/**
+ * @file main.scss
+ * @description This file contains the main styles for the Archive Page.
+ */
+
+/**
+ * Styles the label container in the Archive.
+ */
 label {
 	font-size: var(--medium-font);
 }
 
+/**
+ * Styles the select element in the Archive.
+ */
 select {
 	color: var(--font-color);
 	border: none;
