--- a/src/lib/scss/FourWinning.scss
+++ b/src/lib/scss/FourWinning.scss
@@ -1,3 +1,11 @@
+/**
+* Styles for the FourWinning Component
+*/
+
+/**
+* Styles the meters and points classes in the FourWinning component.
+*/
+
 .meters,
 .points {
 	flex: 0 0 25%;
@@ -9,9 +17,17 @@
 	background-color: transparent;
 }
 
+/**
+* Styles the meters class when hovered in the FourWinning component.
+*/
+
 .meters:hover {
 	cursor: pointer;
 }
+
+/**
+* Styles the buttons in the FourWinning component.
+*/
 
 button {
 	cursor: pointer;
