--- a/src/lib/scss/Archive/game.scss
+++ b/src/lib/scss/Archive/game.scss
@@ -1,3 +1,7 @@
+/**
+	This code defineds the style of the game component in the Archive.
+*/
+
 .game {
 	background-color: var(--nav-color);
 	width: 90vw;
@@ -7,22 +11,34 @@
 	margin-right: auto;
 	margin-bottom: 20px;
 
+	/**
+	* Styles the button in the game component in the Archive.
+	*/
 	button {
 		margin: 10px 0px;
 	}
 
+	/**
+	* Styles the p tag in the game component in the Archive.
+	*/
 	p {
 		border: 3px solid var(--border-color);
 		max-width: max-content;
-		overflow-wrap: break-word; /* Erzwingt Wortumbrüche */
+		overflow-wrap: break-word; /* Force line break */
 	}
 
+	/**
+	* Styles the headline tag in the game component in the Archive.
+	*/
 	.headline {
 		margin-block: 0.5rem;
 		line-height: 1.2;
 		color: var(--h2-color);
 	}
 
+	/**
+	* Styles the hidden class in the game component in the Archive.
+	*/
 	.hidden {
 		display: none;
 	}
