--- a/src/lib/scss/Nav/Nav.scss
+++ b/src/lib/scss/Nav/Nav.scss
@@ -42,6 +42,14 @@ nav {
 				margin-left: 15px;
 				white-space: nowrap;
 			}
+
+			.search {
+				margin-right: 0.5rem;
+			}
+
+			.dropdown-menu {
+				margin-left: 0.5rem;
+			}
 		}
 	}
 }
