--- a/src/lib/scss/Nav/Search.scss
+++ b/src/lib/scss/Nav/Search.scss
@@ -1,39 +1,108 @@
 .search {
 	position: relative;
+	display: inline-block;
+}
+
+button {
+	width: max-content;
+	height: max-content;
+	padding: 0;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 0 1rem;
+	flex-direction: column;
+	position: relative;
+	background-color: var(--nav-color) !important;
+	border: none !important;
+	box-shadow: none !important;
+
+	span .description {
+		font-size: var(--tiny-font);
+	}
 }
 
-.search input {
-	width: 100%;
-	padding: 0.5rem;
-	border: 1px solid #ccc;
-	border-radius: 0.5rem;
+button :global(svg) {
+	transition: opacity 250ms linear, rotate 250ms linear;
+	color: var(--font-color);
 }
 
-.search-results {
-	position: absolute;
-	top: 100%;
+.blurry-background {
+	position: fixed;
+	top: 0;
 	left: 0;
 	width: 100%;
-	background-color: #fff;
-	border: 1px solid #ccc;
-	border-radius: 0.5rem;
-	overflow: hidden;
+	height: 100%;
+	background-color: rgba(110, 118, 129, 0.4);
+	opacity: 50%;
+	z-index: 998;
+	display: block;
 }
 
-.search-result {
-	padding: 0.5rem;
-	border-bottom: 1px solid #ccc;
-}
+.search-content {
+	position: absolute;
+	position: fixed;
+	z-index: 999;
+	display: block;
+	right: 0;
+	top: 0;
+	left: auto;
 
-.search-result a {
-	text-decoration: none;
-	color: #000;
-}
+	font-size: var(--small-font);
 
-.search-result a:hover {
-	background-color: #f0f0f0;
+	box-shadow: 0px 0px 10px var(--shadow-color);
+
+	background-color: var(--nav-color);
+
+	height: 100%;
+	overflow-y: auto;
+
+	max-width: 250px;
+	text-align: left;
+
+	border: 2px solid var(--border-color);
+	border-right: none;
+	border-top-left-radius: calc(var(--border-radius) * 3);
+	border-bottom-left-radius: calc(var(--border-radius) * 3);
+
+	a {
+		text-decoration: none;
+
+		span {
+			margin-right: 0.5rem;
+		}
+	}
+
+	.underline {
+		text-decoration: underline !important;
+	}
+
+	.close-button {
+		margin: 10px;
+
+		&:hover {
+			background-color: var(--label-color);
+		}
+	}
+
+	.border-bottom {
+		border-bottom: 2px solid var(--border-color);
+	}
+
+	.row {
+		display: flex;
+		flex-direction: column;
+		padding-right: 30px;
+		padding-left: 15px;
+	}
+
+	.home,
+	.external-links,
+	.copyright,
+	.logout,
+	.internal-links,
+	.logged-out,
+	.logged-in {
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
 }
