Update Search Component

--- a/src/lib/scss/Nav/Search.scss
+++ b/src/lib/scss/Nav/Search.scss
@@ -72,6 +72,10 @@ button :global(svg) {
 		}
 	}
 
+	.search-results {
+		margin-left: 1rem;
+	}
+
 	.underline {
 		text-decoration: underline !important;
 	}
