--- a/src/lib/scss/Home_page/feature.scss
+++ b/src/lib/scss/Home_page/feature.scss
@@ -6,7 +6,9 @@
 	}
 
 	img {
-		width: 100vw;
+		border: 2px solid var(--border-color);
+		box-shadow: 2px 2px 2px var(--shadow-color);
+		width: 90vw;
 
 		@media screen and (min-width: 768px) {
 			width: 30rem;
