Add slide-in animation to dropdown menu

--- a/src/lib/scss/Nav/Dropdownmenu.scss
+++ b/src/lib/scss/Nav/Dropdownmenu.scss
@@ -38,6 +38,20 @@ button {
 	top: 0;
 	left: auto;
 
+	@keyframes slide-in {
+		from {
+			transform: translateX(100%);
+			opacity: 0;
+		}
+
+		to {
+			transform: translateX(0);
+			opacity: 1;
+		}
+	}
+
+	animation: slide-in 0.5s forwards;
+
 	font-size: var(--small-font);
 
 	box-shadow: 0px 0px 10px var(--shadow-color);
