Update animation time in Dropdownmenu.scss and add animation styles for body

--- a/src/lib/scss/Nav/Dropdownmenu.scss
+++ b/src/lib/scss/Nav/Dropdownmenu.scss
@@ -50,7 +50,7 @@ button {
 		}
 	}
 
-	animation: slide-in 0.5s forwards;
+	animation: slide-in var(--animation-time) forwards;
 
 	font-size: var(--small-font);
 
