--- a/src/lib/scss/Nav/Search.scss
+++ b/src/lib/scss/Nav/Search.scss
@@ -43,6 +43,20 @@ button :global(svg) {
 	top: 0;
 	left: auto;
 
+	@keyframes slide-in {
+		from {
+			transform: translateX(100%);
+			opacity: 0;
+		}
+
+		to {
+			transform: translateX(0);
+			opacity: 1;
+		}
+	}
+
+	animation: slide-in var(--animation-time) forwards;
+
 	font-size: var(--small-font);
 
 	box-shadow: 0px 0px 10px var(--shadow-color);
