Update background color Update accent color

--- a/src/lib/scss/app.scss
+++ b/src/lib/scss/app.scss
@@ -27,7 +27,7 @@
 
 body[data-theme='light'] {
 	/* LIGHT COLORS */
-	--accent-color: rgb(211, 59, 3);
+	--accent-color: linear-gradient(#008000, #40e0d0);
 	--highlight-color: #d4a300;
 	--error-color: rgb(230, 20, 20);
 	--background-color: #fff;
@@ -41,7 +41,7 @@ body[data-theme='light'] {
 
 body[data-theme='dark'] {
 	/* DARK COLORS  */
-	--accent-color: rgb(211, 59, 3);
+	--accent-color: linear-gradient(#008000, #40e0d0);
 	--highlight-color: yellow;
 	--error-color: rgb(230, 20, 20);
 	--background-color: #131317;
@@ -60,7 +60,7 @@ body[data-theme='dark'] {
 body[data-theme='system'] {
 	@media (prefers-color-scheme: dark) {
 		/* DARK COLORS  */
-		--accent-color: rgb(211, 59, 3);
+		--accent-color: linear-gradient(#008000, #40e0d0);
 		--highlight-color: yellow;
 		--error-color: rgb(230, 20, 20);
 		--background-color: #131317;
@@ -75,7 +75,7 @@ body[data-theme='system'] {
 
 	@media (prefers-color-scheme: light) {
 		/* LIGHT COLORS */
-		--accent-color: rgb(211, 59, 3);
+		--accent-color: linear-gradient(#008000, #40e0d0);
 		--highlight-color: #d4a300;
 		--error-color: rgb(230, 20, 20);
 		--background-color: #fff;
