--- a/src/lib/scss/Home_page/main.scss
+++ b/src/lib/scss/Home_page/main.scss
@@ -21,14 +21,14 @@ section {
 .btn {
 	display: inline-block;
 	padding: 0.3rem 1rem;
-	background-color: var(--accent-color);
+	background: var(--accent-color);
 	color: white;
 	text-decoration: none;
 	border-radius: 5px;
 	transition: background-color 0.3s ease;
 
 	&:hover {
-		background-color: #ff4c2f;
+		background: var(--accent-color);
 		box-shadow: 0 4px 7px var(--shadow-color);
 	}
 }
