Update package version and improve language switcher styling

--- a/src/lib/scss/Nav/LanguageSwitcher.scss
+++ b/src/lib/scss/Nav/LanguageSwitcher.scss
@@ -59,7 +59,6 @@ button {
 	background-color: var(--nav-color);
 
 	padding-right: 3rem;
-	padding-left: 2rem;
 
 	height: 100%;
 	overflow-y: auto;
@@ -72,46 +71,20 @@ button {
 	border-top-left-radius: calc(var(--border-radius) * 3);
 	border-bottom-left-radius: calc(var(--border-radius) * 3);
 
-	a,
-	.link {
-		text-decoration: none;
+	.language-selector-btn {
+		background-color: transparent !important;
+		border: 1px solid var(--border-color) !important;
+		color: inherit;
+		cursor: pointer;
+		font-size: 1rem;
+		margin: 0.5rem;
+		padding: 0.5rem;
 
-		span {
-			margin-right: 0.5rem;
+		&.current {
+			background: var(--accent-color) !important;
+			color: white;
+			border: 1px solid var(--font-color) !important;
 		}
-	}
-
-	.link {
-		width: max-content !important;
-		color: inherit !important;
-		text-underline-offset: 0.2rem !important;
-		outline: none !important;
-		margin-bottom: 0 !important;
-
-		display: flex;
-		flex-direction: row;
-
-		&:hover,
-		&:focus {
-			color: var(--highlight-color) !important;
-			cursor: pointer;
-
-			:global(svg) {
-				color: var(--highlight-color) !important;
-			}
-		}
-
-		span {
-			margin-right: 0.5rem;
-		}
-
-		:global(svg):hover {
-			color: var(--highlight-color) !important;
-		}
-	}
-
-	.underline {
-		text-decoration: underline !important;
 	}
 
 	.close-button {
@@ -120,27 +93,5 @@ button {
 		&:hover {
 			background-color: var(--label-color);
 		}
-	}
-
-	.border-bottom {
-		border-bottom: 2px solid var(--border-color);
-	}
-
-	.row {
-		display: flex;
-		flex-direction: column;
-		padding-right: 30px;
-		padding-left: 15px;
-	}
-
-	.home,
-	.external-links,
-	.copyright,
-	.logout,
-	.internal-links,
-	.logged-out,
-	.logged-in {
-		padding-top: 10px;
-		padding-bottom: 10px;
 	}
 }
